[package]
name = "restack"
version = "0.6.0"
edition = "2021"
description = "Teaches git rebase --interactive about your branches."

[[bin]]
name = "restack"
path = "src/main.rs"
doctest = false
test = true

[dependencies]
anyhow = "1.0"
dirs = "4.0.0"
lexopt = "0.2.1"
tempfile = "3.3.0"

[dev-dependencies]
duct = "0.13.5"
indoc = "1.0.7"
lazy_static = "1.4.0"
pretty_assertions = "1.3.0"
restack-testtools = { path = "./testtools" }
rstest = "0.15.0"

[profile.release]
lto = true
panic = "abort"
opt-level = "z"

[workspace]
members = [".", "./testtools"]
