[package]
name = "restack"
version = "0.6.1"
edition = "2021"
description = "Teaches git rebase --interactive about your branches."
homepage = "https://github.com/abhinav/restack"
documentation = "https://github.com/abhinav/restack/blob/main/README.md"
repository = "https://github.com/abhinav/restack"
license = "MIT"

[[bin]]
name = "restack"
path = "src/main.rs"
doctest = false
test = true

[dependencies]
anyhow = "1.0"
lexopt = "0.3.0"
tempfile = "3.3.0"

[dev-dependencies]
duct = "0.13.6"
indoc = "2.0.0"
lazy_static = "1.4.0"
pretty_assertions = "1.3.0"
restack-testtools = { path = "./tools/test" }
rstest = "0.16.0"

[profile.release]
lto = true
panic = "abort"
opt-level = "z"

[workspace]
members = [".", "./tools/test"]
