[package]
name = "restack-testtools"
version = "0.1.0"
edition = "2021"
description = "Testing utilities for restack."

[lib]
doctest = false
test = true

[dependencies]
anyhow = "1.0"
duct = "0.13.6"
file-lock = "2.1.9"
lazy_static = "1.4.0"
sha2 = "0.10.6"
tar = "0.4.38"
tempfile = "3.4.0"
thiserror = "1.0.39"
xz2 = "0.1.7"
